<resources>
    <string name="app_name">Seazoned</string>
    <string name="splashtext">on demand lawn care \n and home solutions.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google +</string>
    <string name="clickhere"><u>click here</u></string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailid">Email</string>
    <string name="phoneno">Phone Number</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="location">Street/Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="confpassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="help">Help</string>
    <string name="mesaage">Message</string>
    <string name="home">Home</string>
    <string name="seazoned">Seazoned</string>
    <string name="profiledetails">Profile Details</string>
    <string name="editproofile">Edit Profile</string>
    <string name="editprof">Edit Profile</string>
    <string name="saveprof">Save Profile</string>
    <string name="mowingEdging">Mowing\n&amp; Edging</string>
    <string name="leafremoval">Leaf\nRemoval</string>
    <string name="lawntreatment">Lawn\nTreatment</string>
    <string name="aeration">Aeration</string>
    <string name="sprinkler">Sprinkler\nWinterizing</string>
    <string name="poolcleaning">Pool Cleaning\n&amp; Upkeep</string>
    <string name="snowremoval">Snow Removal</string>
    <string name="internectconnectionerror">No internet connection.</string>
    <string name="networkerror">Network error</string>
    <string name="temparature">13<sup>o</sup><sub>c</sub></string>
    <string name="addressBook">Address Book</string>
    <string name="logout">Do you want to logout?</string>
    <string name="back">Back</string>
    <string name="cont">Continue</string>
    <string name="lawnmowingtotal">Lawn Mowing Total</string>
    <string name="notification">Notification</string>
    <string name="book_now">Book Now</string>
    <string name="confrmyourbkng">Confrim Your Booking</string>
    <string name="cnfrmbook"><![CDATA[Confrim & Book]]></string>
    <string name="facebook_app_id">184451512451480</string>
    <!--
    <string name="facebook_app_id">216032865795472</string>
-->
    <!--<string name="server_client_id">806611022850-nf9tbpu1foe6i4mp9pjnads1rb90haeu.apps.googleusercontent.com</string>-->
    <string name="server_client_id">806611022850-vc2lf7ds1c1bunrq7as69h9ds8fu0c7u.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
